Refactor backend controllers to use EntityMapper for DTO conversions; remove unused testOllama method in AutoJudgeApplication. Update security configuration to use constructor injection. Enhance frontend setup by removing Tailwind CSS dependencies and adjusting .gitignore for better compatibility.